--- a/styles/globals.css
+++ b/styles/globals.css
@@ -134,7 +134,7 @@ width: 100%;
 
 .hero-banner-container{
   padding: 100px 40px;
-  background-color: #dcdcdc;
+  background-image: linear-gradient(to top, #f43b47 0%, #453a94 100%);
   border-radius: 15px;
   position: relative;
   height: 500px;
@@ -163,7 +163,6 @@ width: 100%;
   margin-top: 4px;
 }
 .hero-banner-container h1{
-  color: white;
   font-size: 10em;
   margin-left: -20px;
   text-transform: uppercase;
